--- a/bitcoinlib/data/config.ini
+++ b/bitcoinlib/data/config.ini
@@ -1,8 +1,8 @@
 #
-# BITCOINLIB - Configuration file
+# WIALIB - Configuration file
 # © 2020 March - 1200 Web Development <http://1200wd.com/>
 #
-# Paths to data, logs and configuration files, all paths are relative to bitcoinlib source directory if no
+# Paths to data, logs and configuration files, all paths are relative to wialib source directory if no
 # absolute path is provided.
 #
 # In this configuration file you can overwrite default settings, for a normal installation it is not necessary to
@@ -10,19 +10,19 @@
 #
 
 [locations]
-# Location of BitcoinLib data, configuration and log files. Relative paths will be based in installation directory
-;data_dir=~/.bitcoinlib
+# Location of wiaLib data, configuration and log files. Relative paths will be based in installation directory
+;data_dir=~/.wialib
 
-# Default directory for database files. Relative paths will be based in user or bitcoinlib installation directory. Only used for sqlite files.
+# Default directory for database files. Relative paths will be based in user or wialib installation directory. Only used for sqlite files.
 ;database_dir=database
 
 # Default database file for wallets, keys and transactions. Relative paths will be based in 'database_dir'
-;default_databasefile=bitcoinlib.sqlite
-;default_databasefile_cache==bitcoinlib_cache.sqlite
+;default_databasefile=wialib.sqlite
+;default_databasefile_cache==wialib_cache.sqlite
 
 # You can also use PostgreSQL or MySQL databases, for instance:
-;default_databasefile=postgresql://postgres:bitcoinlib@localhost:5432/bitcoinlib
-;default_databasefile_cache==postgresql://postgres:bitcoinlib@localhost:5432/bitcoinlib_cache
+;default_databasefile=postgresql://postgres:wialib@localhost:5432/wialib
+;default_databasefile_cache==postgresql://postgres:wialib@localhost:5432/wialib_cache
 
 [common]
 # Allow database threads in SQLite databases
@@ -35,7 +35,7 @@
 ;default_language=english
 
 # Default network when creating wallets, transaction, keys, etc.
-;default_network=bitcoin
+;default_network=wia
 
 # Default witness_type for new wallets and keys
 ;default_witness_type=legacy
@@ -53,12 +53,12 @@
 ;block_count_cache_time=3
 
 [logs]
-# Enable own logging for this library. If true logs will be stored in the log/bitcoinlib.log file.
+# Enable own logging for this library. If true logs will be stored in the log/wialib.log file.
 # Set to False if this library is part of another library or software and you want to handle logs yourself.
-;enable_bitcoinlib_logging=True
+;enable_wialib_logging=True
 
 # Log file name. Relative paths will be based in data_dir directory
-;log_file=~bitcoinlib.log
+;log_file=~wialib.log
 
 # Loglevel for this library, options: CRITICAL, ERROR, WARNING, INFO, DEBUG, NOTSET
 ;loglevel=WARNING
